--- a/MyApplicationfiveone/app/src/main/res/layout/activity_main.xml
+++ b/MyApplicationfiveone/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,17 @@
         android:text="延迟发送消息"
         android:layout_marginTop="16dp" />
 
+    <Button
+        android:id="@+id/btn_count"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="倒计时"
+        android:layout_marginTop="16dp" />
+
     <TextView
         android:id="@+id/tv_message_log"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textSize="16sp" />
+        android:textSize="16dp" />
 </LinearLayout>
